--- a/papamobile/src/App.css
+++ b/papamobile/src/App.css
@@ -1,12 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;500&display=swap');
+
 .App-header {
-  display: flex;
-  justify-content: center;
-  margin-top: -10px;
-  margin-bottom: 10px;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+}
+
+.Bar-header{
+    height: 20px;
 }
 
 .body {
-  width: 50%;
-  margin: auto;
-  margin-bottom: 20px;
+    width: 60%;
+    margin: auto;
+    margin-top: 20px;
+}
+
+.Menu-title {
+    display: block;
+    /* margin-top: 10px; */
+    font-family: Rajdhani, serif;
+    /* color: #0004; */
+    font-weight: 400;
+    font-size: 2.125rem;
+    line-height: 1.235;
+    letter-spacing: 0.00735em;
 }
