--- a/papamobile/src/components/search/search-component.css
+++ b/papamobile/src/components/search/search-component.css
@@ -1,3 +1,15 @@
 .grid-container {
 
 }
+
+.form-title{
+    display : block;
+    font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 600;
+    letter-spacing: normal;
+    font-style: normal;
+    margin: 20px;
+    margin-bottom: 0px;
+}
