--- a/papamobile/src/components/TopBar/topbar-page.css
+++ b/papamobile/src/components/TopBar/topbar-page.css
@@ -1,18 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Saira:ital,wght@1,100&display=swap');
 
 .App-header{
+  /* position: relative; */
   display: flex;
   justify-content: center;
   height: 50px;
+  margin-bottom: 10px;
 }
 
 .title {
   font-family: Saira;
   font-weight: italic;
-}
-
-.body {
-  display: flex;
-  justify-content: center;
-  margin-top: 10px;
 }
