--- a/papamobile/src/components/pages/detail/detail-page.css
+++ b/papamobile/src/components/pages/detail/detail-page.css
@@ -1,15 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Saira:ital,wght@1,100&display=swap');
 
-.App-header{
+/* .App{
   display: flex;
   justify-content: center;
   height: 50px;
-}
-
-.title {
-  font-family: Saira;
-  font-weight: italic;
-}
+} */
 
 .body {
   display: flex;
