--- a/papamobile/src/components/pages/detail/detail-page.css
+++ b/papamobile/src/components/pages/detail/detail-page.css
@@ -1,13 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Saira:ital,wght@1,100&display=swap');
 
-/* .App{
+.Detail {
   display: flex;
+  width: 100%;
   justify-content: center;
-  height: 50px;
-} */
-
-.body {
-  display: flex;
-  justify-content: center;
-  margin-top: 10px;
+  flex-direction: column;
 }
