--- a/papamobile/src/components/TopBar/topbar-page.css
+++ b/papamobile/src/components/TopBar/topbar-page.css
@@ -3,12 +3,39 @@
 .App-header{
   /* position: relative; */
   display: flex;
+  justify-items: center;
   justify-content: center;
-  height: 50px;
+  /* height: auto; */
   margin-bottom: 10px;
+}
+
+.grid_cell{
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  flex-direction: row;
 }
 
 .title {
   font-family: Saira;
   font-weight: italic;
+  font-size: 30px;
+  margin-left: -10px,
+}
+
+.gh-link-title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  /* margin:auto; */
+}
+
+.gh-link-title:hover {
+  text-decoration: underline;     
+}
+
+spacer{
+  margin-left:5px;
 }
