about mobile fix

--- a/papamobile/src/components/pages/about/about-page.css
+++ b/papamobile/src/components/pages/about/about-page.css
@@ -3,28 +3,28 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: 50%;
-    height: 20%;
+    width: 33%;
 }
 
-.box {
+.row {
     margin: auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 
-.box2 {
-    margin: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
+.box {
+    width: 100%;
+    /* display: flex;
+    justify-content: center; */
 }
 
-.box>img {
+.box img {
     max-width: 100%;
     max-height: 100%;
     margin-left: 5px;
     margin-right: 5px;
+    object-fit: cover;
 }
 
 .info {
@@ -34,9 +34,17 @@
     width: 100%;
 }
 
+.authors{
+    width: 100%;
+    display:flex;
+    flex-direction: column;
+    align-content: center;
+}
+
 .author {
     display: flex;
     align-items: center;
+    /* justify-content: center; */
     margin-bottom: 5px;
 }
 
